# geo-seg

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  STATUS.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker.yml
runs/debug1/: best.pt  eval.json  metrics.csv
src/: eval.py
src/geo_seg/: __init__.py  app.py  config.py  eval.py  metrics.py  train.py
src/geo_seg/data/: __init__.py  base.py  random.py
src/geo_seg/models/: __init__.py  build.py
src/geo_seg/utils/: __init__.py  preprocess.py  seed.py
src/geo_seg_baseline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/utils/: logging.py
tests/: test_metrics.py  test_model_forward.py  test_random_ds.py  test_sanity.py  test_train_smoke.py
